@@ -1,3 +1,6 @@
+2010-11-08 Caolán McNamara <cmc at OOo>:
+	* rhbz#650503 crash in arabic dictionary
+
 2010-11-05 Caolán McNamara <cmc at OOo>:
 	* rhbz#648740 don't warn on empty flagvector
 
